
[TestSummarizeEmpty - 1]
{
    "value": {
        "tuwien": {
            "name": "Vienna University of Technology",
            "students": []
        }
    },
    "valid": false,
    "errors": [
        {
            "path": [
                "countryCode"
            ],
            "errors": [
                "incomplete value string"
            ]
        }
    ]
}
---

[TestSummarizeTopLevelArray - 1]
{
    "value": [],
    "valid": true,
    "errors": []
}
---

[TestSummarizeTopLevelArray - 2]
{
    "value": [
        {
            "active": true
        }
    ],
    "valid": false,
    "errors": [
        {
            "path": [
                "0",
                "matNr"
            ],
            "errors": [
                "incomplete value =~\"^[0-9]{8}$\""
            ]
        },
        {
            "path": [
                "0",
                "name"
            ],
            "errors": [
                "incomplete value string"
            ]
        },
        {
            "path": [
                "0",
                "semester"
            ],
            "errors": [
                "incomplete value int"
            ]
        }
    ]
}
---

[TestSummarizeTopLevelArray - 3]
{
    "value": [
        {
            "active": true,
            "name": "Max Mustermann"
        }
    ],
    "valid": false,
    "errors": [
        {
            "path": [
                "0",
                "matNr"
            ],
            "errors": [
                "incomplete value =~\"^[0-9]{8}$\""
            ]
        },
        {
            "path": [
                "0",
                "semester"
            ],
            "errors": [
                "incomplete value int"
            ]
        }
    ]
}
---

[TestSummarizeTopLevelArray - 4]
{
    "value": [
        {
            "active": true,
            "matNr": "11111111",
            "name": "Max Mustermann"
        }
    ],
    "valid": false,
    "errors": [
        {
            "path": [
                "0",
                "semester"
            ],
            "errors": [
                "incomplete value int"
            ]
        }
    ]
}
---

[TestSummarizeTopLevelArray - 5]
{
    "value": [
        {
            "active": true,
            "matNr": "11111111",
            "name": "Max Mustermann",
            "semester": 5
        }
    ],
    "valid": true,
    "errors": []
}
---

[TestPartialExport - 1]
{
    "value": {
        "a": null,
        "b": "abc",
        "c": 1.3,
        "d": 1,
        "g": []
    },
    "valid": false,
    "errors": [
        {
            "path": [
                "e"
            ],
            "errors": [
                "incomplete value bytes"
            ]
        }
    ]
}
---

[TestPartialExportShouldNotIncludeOptionalProperties - 1]
{
    "c": 1.3
}
---

[TestPartialExportShouldNotIncludeOptionalProperties - 2]
{
    "a": null,
    "c": 1.3
}
---

[TestPartialExportShouldIncludeDefaults - 1]
{
    "a": "this is the default"
}
---

[TestPartialExportShouldHandleStructsAndListsCorrectly - 1]
{
    "a": {},
    "e": []
}
---

[TestPartialExportShouldHandleStructsAndListsCorrectly - 2]
{
    "a": {},
    "c": {
        "d": "hello"
    },
    "e": [],
    "f": [
        ",",
        "world"
    ]
}
---

[TestPartialExportShouldHandleBytesCorrectly - 1]
{}
---

[TestDependencyHeuristic - 1]
{
    "x": 0,
    "y": 1,
    "z": 2
}
---

[TestDependencyHeuristicWithCycles - 1]
WasmAPI.Summarize: Dependency analysis failed - cycle detected
---

[TestDependencyHeuristicWithConcreteValues - 1]
{
    "t": 0,
    "x": 0,
    "y": 0,
    "z": 0
}
---
